Forced Room name to be in upper case

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <title>Join | ChatApp</title>
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
+
   <body class="centered-form">
     <div class="centered-form__form">
       <form action="/chat.html">
@@ -22,7 +23,11 @@
         </div>
         <div class="form-field">
           <label>Room name</label>
-          <input type="text" name="room" />
+          <input
+            type="text"
+            name="room"
+            onkeyup="this.value=this.value.toUpperCase();"
+          />
         </div>
         <div class="form-field">
           <button>Join</button>
